[tool.poetry]
name = "setup"
version = "0.1.0"
description = "Setup section of the hypermodern Python project"
authors = ["michael <michael@thecollaboratory.ai>"]
readme = "README.md"
homepage = "https://github.com/mikebrownie/hypermodern-python"
repository = "https://github.com/mikebrownie/hypermodern-python"
keywords = ["hypermodern"]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
